fix: set homepage color for `.bx--list__item`
Lists were black on the homepage, which was a dark container, therefore were not visible.

--- a/packages/gatsby-theme-carbon/src/components/markdown/Markdown.module.scss
+++ b/packages/gatsby-theme-carbon/src/components/markdown/Markdown.module.scss
@@ -97,7 +97,8 @@
   padding-left: $spacing-05;
 }
 
-:global(.container--dark) :global(.bx--list__item) {
+:global(.container--dark) :global(.bx--list__item),
+:global(.container--homepage) :global(.bx--list__item) {
   color: $carbon--white-0;
 }
 
